force-app/main/default/objects/Opportunity_Capability__c/Opportunity_Capability__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Opportunities to Capabilities with revenue percentage weighting.</description>
    <label>Opportunity Capability</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Opportunity Capability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Capabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>