force-app/main/default/objects/Opportunity_Capability__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <label>Capability</label>
    <referenceTo>Service_Portfolio__c</referenceTo>
    <relationshipLabel>Opportunity Capabilities</relationshipLabel>
    <relationshipName>Opportunity_Capabilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>