force-app/main/default/objects/Opportunity_Capability__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Capabilities</relationshipLabel>
    <relationshipName>Opportunity_Capabilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>