force-app/main/default/objects/Opportunity_Capability__c/fields/Revenue_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Percentage__c</fullName>
    <label>Revenue Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>